--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/typography": "^0.5.13",
-        "cross-env": "^7.0.3",
-        "lodash": "^4.17.21",
-        "sass": "^1.77.4",
-        "sass-loader": "^14.2.1",
-        "typescript": "^5.4.5",
+        "@vue/devtools": "^6.6.3",
         "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
+        "cross-env": "^7.0.3",
         "laravel-vite-plugin": "^1.0.0",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.31",
+        "sass": "^1.77.4",
+        "sass-loader": "^14.2.1",
         "tailwindcss": "^3.1.0",
+        "typescript": "^5.4.5",
         "vite": "^5.0"
     }
 }
